--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <title>Recipe Website</title>
 <link rel="stylesheet" href="styles.css">
 </head><body><h1>Welcome to Our Recipe Website</h1>
-<nav><a href="recipes.txt">View Recipes</a></nav>
+<nav><a href="recipes.txt">View Cake Receipes</a></nav>
+<nav><a href="veg.txt">View Veg Receipes</a></nav>
+
 <p>Delicious recipes for everyone!</p><footer>&copy; 
 2023 Our Recipe Website</footer></body></html>
